--- a/css/style.css
+++ b/css/style.css
@@ -13,28 +13,43 @@ body {
 
 h1 {
     padding-top: 10px;
+    color: #5389a6;
 
 }
 
 #app {
-    width: 50%;
+    width: 40%;
     height: 50%;
     margin: 0 auto;
     background-color: white;
     color: black;
-    border-radius: 1em;
+    border-radius: 2em;
     margin-top: 3em;
     padding-bottom: 1em;
-    border: 1px solid black;
 }
 
 ul li {
     list-style: none;
+    margin: 0.4em;
 }
 
 
 .mailResult {
-    padding-top: 50px;
+    padding-top: 30px;
+}
+
+.container {
+    position: relative;
+}
+
+.clock {
+    border: 1px solid black;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    font-size: 0.8em;
+    padding: 0.2em;
+
 }
 
 
@@ -42,3 +57,44 @@ ul li {
     padding-top: 50px;
 }
 
+
+
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+  
+.lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid #5389a6;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color:#5389a6 transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+}
+  
+@keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
